// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AtMention should match snapshot when mentioning a group followed by punctuation 1`] = `
<Fragment>
  <a
    className="group-mention-link"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    @group_display_name
  </a>
  .
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning a group that is allowed reference 1`] = `
<Fragment>
  <a
    className="group-mention-link"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    @group_display_name
  </a>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning a group that is allowed reference with group highlight disabled 1`] = `
<Fragment>
  (at)-developers
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning a group that is not allowed reference 1`] = `
<Fragment>
  (at)-marketing
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning all 1`] = `
<Fragment>
  (at)-all
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning all with mixed case 1`] = `
<Fragment>
  (at)-aLL
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning current user 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc1/image"
    triggerComponentClass="style--none mention--highlight"
    userId="abc1"
  >
    <span
      className="mention-link"
    >
      @First Last
    </span>
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc2/image"
    triggerComponentClass="style--none"
    userId="abc2"
  >
    <span
      className="mention-link"
    >
      @Nick
    </span>
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user containing and followed by punctuation 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc3/image"
    triggerComponentClass="style--none"
    userId="abc3"
  >
    <span
      className="mention-link"
    >
      @Dot Matrix
    </span>
  </ProfilePopoverController>
  .
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user containing punctuation 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc3/image"
    triggerComponentClass="style--none"
    userId="abc3"
  >
    <span
      className="mention-link"
    >
      @Dot Matrix
    </span>
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user followed by punctuation 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc2/image"
    triggerComponentClass="style--none"
    userId="abc2"
  >
    <span
      className="mention-link"
    >
      @Nick
    </span>
  </ProfilePopoverController>
  ...
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user with different teammate name display setting 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc2/image"
    triggerComponentClass="style--none"
    userId="abc2"
  >
    <span
      className="mention-link"
    >
      @user1
    </span>
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user with mixed case 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc2/image"
    triggerComponentClass="style--none"
    userId="abc2"
  >
    <span
      className="mention-link"
    >
      @Nick
    </span>
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/AtMention should match snapshot when not mentioning a user 1`] = `
<Fragment>
  (at)-notauser
</Fragment>
`;

exports[`components/AtMention should match snapshot when not mentioning a user with mixed case 1`] = `
<Fragment>
  (at)-NOTAuser
</Fragment>
`;
